--- a/css/porto.css
+++ b/css/porto.css
@@ -21,6 +21,12 @@ section{
         z-index: -100;
 }
 
+.hover:hover{
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-radius: 5px;
+}
+
 @media (min-width: 1024px) {
     .fullscreen-bg {
       height: auto;
