--- a/css/porto.css
+++ b/css/porto.css
@@ -2,6 +2,7 @@ body{
     background-color: rgb(0, 0, 0);
     opacity: var(10%);
     color: white;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 section{
