--- a/css/porto.css
+++ b/css/porto.css
@@ -10,16 +10,16 @@ section{
 }
 
 .fullscreen-bg{
-        opacity: calc(30%);
-        position: fixed;
-        height: auto;
-        width: 100%;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        overflow: hidden;
-        z-index: -100;
+    opacity: calc(30%);
+    position: fixed;
+    height: auto;
+    width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
 }
 
 .hover:hover{
@@ -28,23 +28,16 @@ section{
   border-radius: 5px;
 }
 
-@media (min-width: 1024px) {
-    .fullscreen-bg {
-      height: auto;
-      background-repeat: repeat;
-    }
-}
-
 img:hover{
-
+  
   transform:scale(1.1);
   transition:all 0.90s ease 0s;
 }
 
 .back-to-top {
-    color: white;
-    background-color: #000000;
-    position: fixed;
+  color: white;
+  background-color: #000000;
+  position: fixed;
     visibility: visible;
     opacity: 100;
     right: 15px;
@@ -56,9 +49,86 @@ img:hover{
     transition: all 0.4s;
     border: 2px solid #030303;
   }
-
+  
   
   .back-to-top.active {
     visibility: visible;
     opacity: 1;
+  }
+  
+  .card-rgb {
+    width: 190px;
+    height: 254px;
+    background: #07182E;
+    position: relative;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 20px;
+  }
+  
+  .card-rgb img {
+    z-index: 1;
+    color: white;
+    font-size: 2em;
+  }
+  
+  .card-rgb::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 130%;
+    animation: rotBGimg 3s linear infinite;
+    transition: all 0.2s linear;
+  }
+  
+  @keyframes rotBGimg {
+    from {
+      transform: rotate(0deg);
+    }
+    
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .card-rgb::after {
+    content: '';
+    position: absolute;
+    background: #07182E;
+    inset: 5px;
+    border-radius: 15px;
+  }  
+
+  @media (min-width: 1024px) {
+      .fullscreen-bg {
+        height: auto;
+        background-repeat: repeat;
+        overflow: hidden;
+        width: 100%;
+      }
+  
+      .back-to-top {
+        color: white;
+        background-color: #000000;
+        position: fixed;
+        visibility: visible;
+        opacity: 100;
+        right: 5px;
+        bottom: 15px;
+        z-index: 996;
+        width: 44px;
+        height: 44px;
+        border-radius: 50px;
+        transition: all 0.4s;
+        border: 2px solid #030303;
+      }
+    
+      
+      .back-to-top.active {
+        visibility: visible;
+        opacity: 1;
+      }
   }
