--- a/css/porto.css
+++ b/css/porto.css
@@ -93,14 +93,6 @@ img:hover{
       transform: rotate(360deg);
     }
   }
-  
-  .card-rgb::after {
-    content: '';
-    position: absolute;
-    background: #07182E;
-    inset: 5px;
-    border-radius: 15px;
-  }  
 
   @media (min-width: 1024px) {
       .fullscreen-bg {
@@ -132,3 +124,37 @@ img:hover{
         opacity: 1;
       }
   }
+ 
+.preload-content { 
+    position: absolute; 
+    top: 50%; 
+    bottom: 0; 
+    left: 0; 
+    right: 0; 
+    margin: auto; 
+}
+
+#pre-loader {
+  background-image: linear-gradient(rgb(186, 66, 255) 35%,rgb(0, 225, 255));
+  width: 100px;
+  height: 100px;
+  animation: spinning82341 1.7s linear infinite;
+  text-align: center;
+  border-radius: 50px;
+  filter: blur(1px);
+  box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+}
+
+.pre-loader1 {
+  background-color: rgb(36, 36, 36);
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  filter: blur(10px);
+}
+
+@keyframes spinning82341 {
+  to {
+    transform: rotate(360deg);
+  }
+}
