--- a/css/porto.css
+++ b/css/porto.css
@@ -1,4 +1,6 @@
 body{
+    margin: 0;
+    padding: 0;
     background-color: rgb(0, 0, 0);
     opacity: var(10%);
     color: white;
@@ -10,21 +12,18 @@ section{
 }
 
 .fullscreen-bg{
+    z-index: -1;
     opacity: calc(30%);
     position: fixed;
     height: auto;
     width: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     overflow: hidden;
-    z-index: -100;
 }
 
 .hover:hover{
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: white;
+  transition: all 0.35s ease-in-out;
   border-radius: 5px;
 }
 
