--- a/css/porto.css
+++ b/css/porto.css
@@ -5,6 +5,7 @@ body{
     opacity: var(10%);
     color: white;
     font-family: 'Ubuntu', sans-serif;
+    overflow-x: hidden;
 }
 
 section{
@@ -192,4 +193,11 @@ img:hover{
   flex: 2;
   transform:scale(1.1);
   transition: all .8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.navbar-scrolled {
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.685);
+  padding: 10px 0;
+  transition: linear 0.2s;
 }
