--- a/css/porto.css
+++ b/css/porto.css
@@ -1,37 +1,36 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(0, 0, 0);
-    opacity: var(10%);
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
-    overflow-x: hidden;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(0, 0, 0);
+  opacity: var(10%);
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  overflow-x: hidden;
 }
 
-section{
-    padding-top : 3rem;
+section {
+  padding-top: 3rem;
 }
 
-.fullscreen-bg{
-    z-index: -1;
-    opacity: calc(30%);
-    position: fixed;
-    height: auto;
-    width: 100%;
-    overflow: hidden;
+.fullscreen-bg {
+  z-index: -1;
+  opacity: calc(30%);
+  position: fixed;
+  height: auto;
+  width: 100%;
+  overflow: hidden;
 }
 
-.hover:hover{
+.hover:hover {
   background-color: black;
   color: white;
   transition: all 0.35s ease-in-out;
   border-radius: 5px;
 }
 
-img:hover{
-  
-  transform:scale(1.1);
-  transition:all 0.90s ease 0s;
+img:hover {
+  transform: scale(1.1);
+  transition: all 0.9s ease 0s;
 }
 
 /* back to top button */
@@ -40,9 +39,86 @@ img:hover{
   color: white;
   background-color: #000000;
   position: fixed;
+  visibility: visible;
+  opacity: 100;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  width: 44px;
+  height: 44px;
+  border-radius: 50px;
+  transition: all 0.4s;
+  border: 2px solid #030303;
+}
+
+.back-to-top.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* rgb card */
+
+.card-rgb {
+  width: 190px;
+  height: 254px;
+  background: #07182e;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.card-rgb img {
+  z-index: 1;
+  color: white;
+  font-size: 2em;
+}
+
+.card-rgb::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(
+    180deg,
+    rgb(0, 183, 255),
+    rgb(255, 48, 255)
+  );
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+}
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .fullscreen-bg {
+    height: auto;
+    background-repeat: repeat;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .back-to-top {
+    color: white;
+    background-color: #000000;
+    position: fixed;
     visibility: visible;
     opacity: 100;
-    right: 15px;
+    right: 20px;
     bottom: 15px;
     z-index: 996;
     width: 44px;
@@ -51,109 +127,34 @@ img:hover{
     transition: all 0.4s;
     border: 2px solid #030303;
   }
-  
-  
+
   .back-to-top.active {
     visibility: visible;
     opacity: 1;
   }
-  
-/* rgb card */
+}
 
-  .card-rgb {
-    width: 190px;
-    height: 254px;
-    background: #07182E;
-    position: relative;
-    display: flex;
-    place-content: center;
-    place-items: center;
-    overflow: hidden;
-    border-radius: 20px;
-  }
-  
-  .card-rgb img {
-    z-index: 1;
-    color: white;
-    font-size: 2em;
-  }
-  
-  .card-rgb::before {
-    content: '';
-    position: absolute;
-    width: 100px;
-    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
-    height: 130%;
-    animation: rotBGimg 3s linear infinite;
-    transition: all 0.2s linear;
-  }
-  
-  @keyframes rotBGimg {
-    from {
-      transform: rotate(0deg);
-    }
-    
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-
-  @media only screen and (min-width: 1024px) {
-      body{
-        overflow-x: hidden;
-      }
-
-      .fullscreen-bg {
-        height: auto;
-        background-repeat: repeat;
-        overflow: hidden;
-        width: 100%;
-      }
-  
-      .back-to-top {
-        color: white;
-        background-color: #000000;
-        position: fixed;
-        visibility: visible;
-        opacity: 100;
-        right: 20px;
-        bottom: 15px;
-        z-index: 996;
-        width: 44px;
-        height: 44px;
-        border-radius: 50px;
-        transition: all 0.4s;
-        border: 2px solid #030303;
-      }
-    
-      
-      .back-to-top.active {
-        visibility: visible;
-        opacity: 1;
-      }
-  }
- 
 /* preload */
 
-.preload-content { 
-    position: absolute; 
-    top: 50%; 
-    bottom: 0; 
-    left: 0; 
-    right: 0; 
-    margin: auto; 
+.preload-content {
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 #pre-loader {
-  background-image: linear-gradient(rgb(186, 66, 255) 35%,rgb(0, 225, 255));
+  background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
   width: 100px;
   height: 100px;
   animation: spinning82341 1.7s linear infinite;
   text-align: center;
   border-radius: 50px;
   filter: blur(1px);
-  box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+  box-shadow: 0px -5px 20px 0px rgb(186, 66, 255),
+    0px 5px 20px 0px rgb(0, 225, 255);
 }
 
 .pre-loader1 {
@@ -191,8 +192,8 @@ img:hover{
 
 .gallery > div:hover {
   flex: 2;
-  transform:scale(1.1);
-  transition: all .8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transform: scale(1.1);
+  transition: all 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .navbar-scrolled {
@@ -200,4 +201,126 @@ img:hover{
   background: rgba(0, 0, 0, 0.685);
   padding: 10px 0;
   transition: linear 0.2s;
+}
+
+/* snow */
+
+/* customizable snowflake styling */
+.snowflake {
+  color: #fff;
+  font-size: 1em;
+  font-family: Arial;
+  text-shadow: 0 0 1px #000;
+}
+
+@-webkit-keyframes snowflakes-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@-webkit-keyframes snowflakes-shake {
+  0% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+  50% {
+    -webkit-transform: translateX(80px);
+    transform: translateX(80px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+}
+@keyframes snowflakes-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@keyframes snowflakes-shake {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(80px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+.snowflake {
+  position: fixed;
+  top: -10%;
+  z-index: 9999;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  -webkit-animation-name: snowflakes-fall, snowflakes-shake;
+  -webkit-animation-duration: 1s, 3s;
+  -webkit-animation-timing-function: linear, ease-in-out;
+  -webkit-animation-iteration-count: infinite, infinite;
+  -webkit-animation-play-state: running, running;
+  animation-name: snowflakes-fall, snowflakes-shake;
+  animation-duration: 8s, 3s;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+  animation-play-state: running, running;
+}
+.snowflake:nth-of-type(0) {
+  left: 1%;
+  -webkit-animation-delay: 0s, 0s;
+  animation-delay: 0s, 0s;
+}
+.snowflake:nth-of-type(1) {
+  left: 10%;
+  -webkit-animation-delay: 1s, 1s;
+  animation-delay: 1s, 1s;
+}
+.snowflake:nth-of-type(2) {
+  left: 20%;
+  -webkit-animation-delay: 6s, 0.5s;
+  animation-delay: 6s, 0.5s;
+}
+.snowflake:nth-of-type(3) {
+  left: 30%;
+  -webkit-animation-delay: 4s, 2s;
+  animation-delay: 4s, 2s;
+}
+.snowflake:nth-of-type(4) {
+  left: 40%;
+  -webkit-animation-delay: 2s, 2s;
+  animation-delay: 2s, 2s;
+}
+.snowflake:nth-of-type(5) {
+  left: 50%;
+  -webkit-animation-delay: 8s, 3s;
+  animation-delay: 8s, 3s;
+}
+.snowflake:nth-of-type(6) {
+  left: 60%;
+  -webkit-animation-delay: 6s, 2s;
+  animation-delay: 6s, 2s;
+}
+.snowflake:nth-of-type(7) {
+  left: 70%;
+  -webkit-animation-delay: 2.5s, 1s;
+  animation-delay: 2.5s, 1s;
+}
+.snowflake:nth-of-type(8) {
+  left: 80%;
+  -webkit-animation-delay: 1s, 0s;
+  animation-delay: 1s, 0s;
+}
+.snowflake:nth-of-type(9) {
+  left: 90%;
+  -webkit-animation-delay: 3s, 1.5s;
+  animation-delay: 3s, 1.5s;
 }
